--- a/_posts/2021-07-16-安卓笔记(1).md
+++ b/_posts/2021-07-16-安卓笔记(1).md
@@ -86,11 +86,12 @@ C#真实泛型，内存中也是不同类型。
 ### 2.如何写线程安全的程序
 **什么是线程安全**  
 每个线程都有一个自己的内存副本，同时对同一块内存进行操作，由于时间片等，导致最后结果出现误差。   
-**本质**是<font color=#00ff00>可变</font>资源，线程间共享的问题。
+**本质** 是<font color=red>可变</font>资源，线程间<font color=red>共享</font>的问题。
 
 **如何实现线程安全**  
 * 不共享资源。
     纯函数（可重入函数），ThreadLocal
+    `ThreadLocal`是一个绑定到线程上的map
 * 共享不可变资源。
     final, 非final的成员变量可能重排序到构造方法之外。
 * 共享可变资源
