--- a/_posts/2021-07-16-安卓笔记(1).md
+++ b/_posts/2021-07-16-安卓笔记(1).md
@@ -87,16 +87,38 @@ C#真实泛型，内存中也是不同类型。
 **什么是线程安全**  
 每个线程都有一个自己的内存副本，同时对同一块内存进行操作，由于时间片等，导致最后结果出现误差。   
 **本质** 是<font color=red>可变</font>资源，线程间<font color=red>共享</font>的问题。
-![ThreadLocal](/images/threadlocal.png)
+
 **如何实现线程安全**  
 * 不共享资源。
     纯函数（可重入函数），ThreadLocal
     `ThreadLocal`是一个绑定到线程上的map
+    ![ThreadLocal](/images/threadlocal.png)   
+    `ThreadLocal`使用建议
+    * 声明为全局静态final成员
+    * 避免存储大量对象
+    * 用完后及时移除对象
 * 共享不可变资源。
-    final, 非final的成员变量可能重排序到构造方法之外。
+    `final`, 非final的成员变量可能重排序到构造方法之外。    
+    `volatile`, 主要是可见性，也有禁止重排序的功能。
 * 共享可变资源
   * 可见性
+    * 使用**final**关键字
+    * 使用**volatile**关键字
+    * 加锁，锁释放时会强制将缓存刷新到主内存
   * 操作原子性
+    * 加锁，保证操作的互斥性
+    * 使用CAS指令(如Unsafe.compareAndSwapInt)
+    * 使用原子数值类型(如AtomicInteger)
+    * 使用原子属性更新器(AtomicReferenceFieldUpdater)
   * 禁止重排序
 
-### 3.ConcurrentHashMap
+### 3.ConcurrentHashMap如何支持并发访问？
+CHM并发优化历程
+* JDK5:分段锁，必要时加锁
+* JDK6:优化二次Hash算法
+* JDK7:段懒加载，volatile & cas
+* JDK8:摒弃段，基于HashMap原理的并发实现  
+
+![CHM分段锁](/images/CHM分段锁Hash优化.png)  
+重点问题是 高位和低位Hash后能够均匀分布到各个段和表中。   
+出现的问题有， key是整数时，高位3万多之内的数都集中到一个段中，违背了设计初衷，在JDK6的时候 优化了hash算法，保证了均匀分布。
