--- a/_posts/2021-07-16-安卓笔记(1).md
+++ b/_posts/2021-07-16-安卓笔记(1).md
@@ -121,4 +121,26 @@ CHM并发优化历程
 
 ![CHM分段锁](/images/CHM分段锁Hash优化.png)  
 重点问题是 高位和低位Hash后能够均匀分布到各个段和表中。   
-出现的问题有， key是整数时，高位3万多之内的数都集中到一个段中，违背了设计初衷，在JDK6的时候 优化了hash算法，保证了均匀分布。
+出现的问题有， key是整数时，高位3万多之内的数都集中到一个段中，违背了设计初衷，在JDK6的时候 优化了hash算法，保证了均匀分。    
+
+CHM如何计数？    
+JDK5~7 基于段元素个数求和，二次不同就加锁。    
+JDK8 引入CounterCell,本质上也是分段计数。    
+
+CHM是弱一致性的
+* 添加元素后，不一定马上能读到
+* 清空之后可能仍然会有元素
+* 遍历之前的段元素的变化会读到
+* 遍历之后的段元素变化读不到
+* 遍历时元素发生变化不抛异常
+
+HashTable的问题    
+* 大锁：对hashtable对象加锁
+* 长锁：直接对方法加锁
+* 读写锁共用：只有一把锁，从头锁到尾    
+
+CHM的解决方法
+* 小锁：分段锁（5~7），桶节点锁（8）
+* 短缩：先尝试获取，失败再加锁
+* 分离读写锁：读失败再加锁（5~7），volatile读 CAS写（7~8）    
+![锁的优化](/images/锁的优化.png)    
