--- a/_posts/2021-07-16-安卓笔记(1).md
+++ b/_posts/2021-07-16-安卓笔记(1).md
@@ -143,4 +143,10 @@ CHM的解决方法
 * 小锁：分段锁（5~7），桶节点锁（8）
 * 短缩：先尝试获取，失败再加锁
 * 分离读写锁：读失败再加锁（5~7），volatile读 CAS写（7~8）    
-![锁的优化](/images/锁的优化.png)    
+![锁的优化](/images/锁的优化.png)  
+
+### 4.AtomicReference和AtomicReferenceFieldUpdater有何异同？
+`AtomicReference`使用
+![AtomicReference使用](/images/AtomicReference使用.png)    
+`AtomicReferenceFieldUpdater`使用
+![AtomicReferenceFieldUpdater使用](/images/AtomicReferenceFieldUpdater使用.png)
