--- a/_posts/2021-07-16-安卓笔记(1).md
+++ b/_posts/2021-07-16-安卓笔记(1).md
@@ -197,3 +197,10 @@ AR会占用更多内存...
 ##  三、JNI编程
 
 ### 1.CPU架构适配需要注意哪些问题？
+* Native开发才会关注CPU架构
+* 不同CPU架构之间的兼容性如何
+* so库太多如何优化Apk体积
+* SDK开发者应当提供哪些so库    
+
+#### CPU架构兼容性
+![cpu架构兼容性](/images/cpu架构兼容性.png)
