--- a/_posts/2021-07-16-安卓笔记(1).md
+++ b/_posts/2021-07-16-安卓笔记(1).md
@@ -269,6 +269,24 @@ AR会占用更多内存...
 | 开发体验 | 几乎无副作用 | 重构代码时较为繁琐 |    
 | Android Studio 支持 | 不能自动关联跳转 | 自动关联JNI函数可跳转 |    
 
+### 3.JNI如何实现数据传递？
+
+**题目剖析**    
+* 传递什么数据？
+* 如何实现内存回收？
+* 性能如何？
+* 结合实例来分析更有效。    
+例如 Bitmap： Native层也有一个类对应，通过一个 long类型的指针，C层是jlong类型。    
+**字符串操作**    
+C层知识点有点多，需要补充消化一下    
+**对象数组传递**    
+待补充    
+**DirectBuffer**   
+注意共享物理内存中取出的数据字节序问题    
+![DirectBuffer](/images/DirectBuffer.png)
+
+
+
 
 
 
