--- a/_posts/2021-07-16-安卓笔记(1).md
+++ b/_posts/2021-07-16-安卓笔记(1).md
@@ -283,7 +283,21 @@ C层知识点有点多，需要补充消化一下
 待补充    
 **DirectBuffer**   
 注意共享物理内存中取出的数据字节序问题    
-![DirectBuffer](/images/DirectBuffer.png)
+![DirectBuffer](/images/DirectBuffer.png)    
+
+**总结**    
+* 通过long类型传递底层对象指针给Java层
+* 注意String的几组函数操作的区别与适用场景
+* 注意对象数组较大时localRef超过上限的问题
+* 注意使用DirectBuffer时字节序的问题    
+
+### 4.如何全局捕获Native异常？
+**题目剖析**    
+* 如何捕获Native异常
+* 如何清理Native层和Java层的资源
+* 如何为问题的排查提供支持   
+
+![Native异常](/images/捕获Native异常.png)
 
 
 
