--- a/_posts/2021-07-16-安卓笔记(1).md
+++ b/_posts/2021-07-16-安卓笔记(1).md
@@ -301,6 +301,7 @@ C层知识点有点多，需要补充消化一下
 ![Native异常](/images/捕获Native异常.png)
 
 **传递异常到Java层**     
+待补充
 
 **捕获Native异常堆栈**    
 * 设置备用栈，防止SIGSEGV因栈溢出而出现堆栈被破坏
@@ -316,25 +317,23 @@ C层知识点有点多，需要补充消化一下
 * 举例如何用其他语言编写符合JNI命名规则的符号    
 
 #### JNI对Native函数的要求   
-##### 静态绑定
+**静态绑定**
 * 符号表可见
 * 命名符合Java Native 方法的 <font color=red>包名_类名_方法名</font>
 * 符号名按照C语言的规则修饰
-
-##### 动态绑定
+**动态绑定**
 * 函数本身无要求
 * JNI可识别入口函数如JNI_OnLoad进行注册即可
 
+#### 可选的Native语言
+* Golang
+* Rust
+* Kotlin Native
+* Scala Native
+* ...
 
+#### 认识 Kotlin Native
+![kotlin_native](/images/kotlin_native.png)
 
-
-
-
-
-
-
-
-
-
-
-------
+#### Kotlin Native 编写 JNI Native库
+待补充
