--- a/_posts/2021-07-22-安卓笔记(2).md
+++ b/_posts/2021-07-22-安卓笔记(2).md
@@ -59,6 +59,35 @@ public @NonNull Activity instantiateActivity(@NonNull ClassLoader cl, @NonNull S
     }
 ```
 
+Activity不能添加构造方法，Fragment不能添加有参数的构造方法，因为在activity状态保存和恢复的时候，重新创建。    
+
+#### Activity的窗口如何展示
+![Activity的窗口如何展示](/images/Activity的窗口如何展示.png)
+
+#### Activity转场动画的实现机制
+安卓5.0之后加入的 类似keynote里神奇动画的效果。
+**调用过程**    
+![1](/images/Activity转场动画的实现机制1.png)
+![2](/images/Activity转场动画的实现机制2.png)
+
+### 如何跨App启动Activity？有哪些注意事项？
+**题目剖析**    
+--跨App    
+--注意事项   
+
+#### 跨App启动Activity有哪些方式？
+* 共享uid的APP，manifest根节点android:sharedUserId="com.XXXX"，流量计算也是共享的（linux流量计算），方式：        intent.setComponent(new ComponentName("pkgname_b", "activity_b"));
+* 使用exported， 在manifest activity节点，例如微信登陆。启动方式与上一个类似。
+* 使用intentFilter action节点
+
+#### 为允许外部启动的Activity加权限
+![为允许外部启动的Activity加权限](/images/为允许外部启动的Activity加权限.png)
+**注意：这种情况APP_B 一定要在APP_A之前安装。**
+
+#### 拒绝服务漏洞
+**原因是 Activity 从bundle中getExtra拿数据时，一定会将数据反序列化，这个过程中如果有未知的类，就会报异常。**     
+**解决办法很简单，读传递的数据时，加一下try-catch
+
 
 
 
