--- a/_posts/2021-07-22-安卓笔记(2).md
+++ b/_posts/2021-07-22-安卓笔记(2).md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 安卓笔记(二)：Activity、Handler
+title: 安卓笔记(二)：Activity、Handler、内存优化
 date: 2021-07-22
 tags: 安卓
 ---
@@ -325,8 +325,59 @@ public E take() throws InterruptedException {
 * Android的MQ可以针对单线程读取的场景做优化
 
 
+## 六、内存优化
 
+### 1.如何避免OOM的产生？
+**题目剖析**    
+* OOM如何产生？
+* 如何优化程序减少内存占用？
 
+#### OOM的产生
+* 已使用内存 + 新申请内存 > 可分配内存
+* OOM几乎覆盖所有的内存区域，通常指堆内存
+* Native Heap 在物理内存不够时也会抛OOM
+
+#### 解决方法     
+
+**使用合适的数据结构**
+![选择数据结构](/images/选择数据结构.png)    
+大数据量，频繁增删时，使用HashMap。    
+数据少，不频繁增删，Key是整型时，用SparseArray。SparseArray 也是一个map，避免了拆箱和装箱。    
+数据少，不频繁增删，Key不是整型时，用ArrayMap,与HashMap主要区别是有缩容机制，无额外的对象开销，HashMap有个Entry对象，小数组复用池。      
+
+**内存复用（池化）**    
+ArrayMap里的小数组复用，Message里面的sPool，等等。    
+
+**避免使用枚举**     
+枚举的好处是类型安全，可读性强。但是占用内存太大，24字节。一个枚举会增加大约 **1.0到1.4KB** 的classes.dex文件。    
+代替的方法可使用 `@IntDef` 和 `@interface`  或者 `Kotlin内联类`       
+```Java
+@IntDef({Int常量A, Int常量B, Int常量C})
+@interface 类型{}
+
+public void set名称(@类型 int p){ }
+```
+
+**Bitmap的使用**     
+* 尽量根据实际需求选择合适的分辨率
+* 注意原始文件分辨率与内存缩放的结果
+* 不用帧动画，使用代码实现动效
+* 考虑对Bitmap的重采样和复用配置
+
+**谨慎的使用多进程**    
+一个进程被Fork出来之后，会自带一些预加载的公共资源，开辟一个进程，只运行一行代码，同样也会占好几M内存。    
+
+**谨慎的使用Large Heap**      
+Java虚拟机 `-Xmx4096m`    
+Android虚拟机 `android:largeHeap="true"`    
+
+**使用NDK**       
+* Native Heap 没有专门的使用限制
+* 内存大户的核心逻辑主要在Native层
+    * 各类基于`Cocos2dx`、`Unity3D`等框架的游戏
+    * 游戏以外的OpenGL重度用户，例如各大地图APP
+
+####
 
 
 
