--- a/_posts/2021-08-03-安卓笔记(3).md
+++ b/_posts/2021-08-03-安卓笔记(3).md
@@ -90,8 +90,19 @@ private void initWindowDecorActionBar(){
 | 存在问题 | 替换资源受限<br>Hook过程较为繁琐<br>影响资源加载，入侵性较强 | 资源获取效率有影响<br>不支持Style、assets目录<br>Resource需要替换多处<br>Resource包装类代码量大 | 5.0以前不能新增Entry<br>强依赖编译期资源id的一致性处理 |
 | 资源重定向 | 无此问题 | 运行时动态映射<br>编译器静态对齐(可选) | 编译器静态对齐 |
 
+#### 资源重定向
+**动态替换方案**      
+Resources包装流 和 AssetManager替换流 通常是通过加载APK来进行资源的替换，那这样一来，资源的ID 肯定会不一样，资源重定向就是先通过主包的资源ID 查找到资源的名字，再通过资源名字找资源包里面对应的ID，然后再进行替换。
+**静态编译方案**    
+* 1.AAPT编译时输入主包资源ID的映射，public.xml
+* 2.编译后根据主包映射关系修改皮肤包的 resources.arsc
+      **遇到的问题**    
+      * 资源增量静态对齐
 
+#### AssetManager替换流的实现
+通过反射获取 AssetManager实例通过反射addAssetPath方法，添加皮肤包资源，添加主包， 5.0之前和之后 添加顺序是反的。
 
+**Javasist修改字节码**完成自动注入。
 
 
 
