--- a/_posts/2021-08-12-数据结构-树.md
+++ b/_posts/2021-08-12-数据结构-树.md
@@ -51,8 +51,32 @@ tags: 算法与数据结构
         - [x] `n = 2^h - 1 = 2^0 + 2^1 + ··· + 2^(h-1)`  
         - [x] `h = log2 (n+1)`
 
+### 完全二叉树
 
-
+`完全二叉树`：叶子节点只会出现最后2层，且最后1层的`叶子`节点都**靠左**对齐。可以理解为，节点从上到下，从左到右，挨着排布。    
+**性质**：    
+- [x] 度为1的节点只有左子树
+- [x] 度为1的节点要么是1个，要么是0个
+- [x] 同样节点数量的二叉树，完全二叉树的高度最小
+- [x] 假设完全二叉树的高度为h(h >= 1)，那么
+    - [ ] 至少有`2^(h-1)`个节点（2^0 + 2^1 + 2^2 + ··· + 2^(h-2) + 1）
+    - [ ] 至多有`2^h - 1`个节点 (满二叉树)
+    - [ ] 总节点数量为n  ---  2^(h-1) <= n < 2^h  ---  h - 1 <= log2 n < h  所以h = log2n向下取整+1
+            `floor` 向下取整    
+            `ceiling` 向上取整    
+- [x] 一棵有n个节点的完全二叉树（n > 0）, 从上到下、从左到右对节点从<font color=red>1</font>开始进行编号，对任意第i个节点
+    - [ ] 如果 i = 1，它是根节点
+    - [ ] 如果 i > 1，它的父节点编号为 `floor(i/2)`
+    - [ ] 如果 2i <= n，它的左子节点编号为 `2i`
+    - [ ] 如果 2i > n， 它无左子节点
+    - [ ] 如果 2i + 1 <= n，它的右子节点编号为 `2i + 1`
+    - [ ] 如果 2i + 1 > n， 它无右子节点
+- [x] 一棵有n个节点的完全二叉树（n > 0）, 从上到下、从左到右对节点从<font color=red>0</font>开始进行编号，对任意第i个节点
+    - [ ] 如果 i = 0，它是根节点
+    - [ ] 如果 i > 0，它的父节点编号为 `floor((i-1)/2)`
+    - [ ] 如果 2i + 1 <= n - 1，它的左子节点编号为 `2i + 1`
+    - [ ] 如果 2i + 1 > n - 1， 它无左子节点
+    - [ ] 如果 2i + 2 <= n - 1，它的右子节点编号为 `2i + 2`
 
 
 
