--- a/_posts/2021-07-16-安卓笔记(1).md
+++ b/_posts/2021-07-16-安卓笔记(1).md
@@ -73,7 +73,7 @@ C#真实泛型，内存中也是不同类型。
 为什么不能简单停止一个线程？  
 线程1假如正在读写数据，直接被停止掉，线程2立马对内存块进行加锁，导致内存数据来不及清理。  
 线程是一个协作的**任务执行**的模式。  
-* 通知目标线程自行介绍，而不是强制停止。
+* 通知目标线程自行结束，而不是强制停止。
 * 目标线程应该具有处理中断的能力。
 * 中断方式：  
     * Interrupt
@@ -94,9 +94,9 @@ C#真实泛型，内存中也是不同类型。
     `ThreadLocal`是一个绑定到线程上的map
     ![ThreadLocal](/images/threadlocal.png)   
     `ThreadLocal`使用建议
-    * 声明为全局静态final成员
-    * 避免存储大量对象
-    * 用完后及时移除对象
+    - [ ] 声明为全局静态final成员
+    - [ ] 避免存储大量对象
+    - [ ] 用完后及时移除对象
 * 共享不可变资源。
     `final`, 非final的成员变量可能重排序到构造方法之外。    
     `volatile`, 主要是可见性，也有禁止重排序的功能。
