--- a/_posts/2021-10-13-Android-实战细节笔记整理.md
+++ b/_posts/2021-10-13-Android-实战细节笔记整理.md
@@ -30,7 +30,16 @@ State 表达的是形态，而 Status 表达的是从一种形态转换成另一
 https://blog.csdn.net/jxf_access/article/details/79564669
 
 ## Android内、外存储 易混淆点剖析（/mnt/sdcard、/storage/sdcard0、/storage/emulated/0等区别）
+在Android4.4以前，内部存储（Internal Storage）就是指手机机身存储，而外部存储（External Storage）则指外置SD卡。
+而在Android4.4及以后，在没有外置SD卡的情况下机身存储分为了内部存储（Internal Storage）和外部存储（External Storage）；如果加上外置SD卡则外置SD卡和机身存储的外部存储都算作外部存储（External Storage）
+
+手机文件管理中的根目录 对应的是 /sdcard/...   
+
+参考文章：      
 https://blog.csdn.net/ITermeng/article/details/79423035
+https://juejin.cn/post/6844904110903279624
+
+https://juejin.cn/post/6844904110903279624
 
 
 
