--- a/_posts/2021-10-13-Android-实战细节笔记整理.md
+++ b/_posts/2021-10-13-Android-实战细节笔记整理.md
@@ -29,19 +29,11 @@ State 表达的是形态，而 Status 表达的是从一种形态转换成另一
 ## CoordinatorLayout使用详解: 打造折叠悬浮效果
 https://blog.csdn.net/jxf_access/article/details/79564669
 
-## Android内、外存储 易混淆点剖析（/mnt/sdcard、/storage/sdcard0、/storage/emulated/0等区别）
-在Android4.4以前，内部存储（Internal Storage）就是指手机机身存储，而外部存储（External Storage）则指外置SD卡。
-而在Android4.4及以后，在没有外置SD卡的情况下机身存储分为了内部存储（Internal Storage）和外部存储（External Storage）；如果加上外置SD卡则外置SD卡和机身存储的外部存储都算作外部存储（External Storage）
+## Android 浅谈 maxEms 属性， 不是字符数量而是宽度
+https://www.jianshu.com/p/8c6ddebbf4f2?utm_source=oschina-app
 
-手机文件管理中的根目录 对应的是 /sdcard/...   
-
-参考文章：      
-https://blog.csdn.net/ITermeng/article/details/79423035
-https://juejin.cn/post/6844904110903279624
-
-https://juejin.cn/post/6844904110903279624
-
-
+## 多module时，子module中，获取Application上下文，解决办法
+创建一个 base module 再在这个module中创建自己的Application类，并将base module 在每个模块中都导入。
 
 
 
